--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
 # For production deployment
-REACT_APP_BASE_URL=https://bcc.bombaycodingcompany.com/api/v1
+REACT_APP_BASE_URL=https://cyberking-capital.onrender.com/api/v1
