--- a/.gitignore
+++ b/.gitignore
@@ -14,10 +14,18 @@
 # misc
 .DS_Store
 .env.local
-.env.development
+.env.development.local
 .env.test.local
-.env.production
+.env.production.local
 
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+node_modules
+.env
+build
+.DS_Store
+
+.env.production
+.env.development
