--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.8.4",
     "concurrently": "^9.1.2",
+    "date-fns": "^4.1.0",
+    "file-saver": "^2.0.5",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.503.0",
     "react": "^19.1.0",
+    "react-date-picker": "^11.0.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.1",
     "react-hot-toast": "^2.5.2",
@@ -23,7 +29,8 @@
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "timeago.js": "^4.0.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
