--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
+    "redux-thunk": "^3.1.0",
     "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
