--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,4 @@
 # For local development
 REACT_APP_BASE_URL=http://localhost:4000/api/v1
 GENERATE_SOURCEMAP=false
+REACT_APP_IMAGE_URL=http://localhost:4000
