--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,3 @@
 # For production deployment
 REACT_APP_BASE_URL=https://crm.bombaycodingcompany.com/api/v1
+REACT_APP_IMAGE_URL=https://crm.bombaycodingcompany.com
