--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
+    "react-select": "^5.10.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "timeago.js": "^4.0.2",
